# linear-programming

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base.cc  base.h  base_test.cc  ilp.cc  ilp.h  ilp_test.cc  lp.cc  lp.h  lp_column_generation.cc  lp_dual_simplex.cc  lp_primal_dual_path_following.cc  lp_primal_dual_path_following_test.cc  lp_primal_path_following.cc  lp_primal_path_following_test.cc  lp_revised_simplex.cc  lp_revised_simplex_tableau.cc  lp_revised_simplex_tableau_test.cc  lp_revised_simplex_test.cc  lp_simplex.cc  lp_simplex_tableau.cc  lp_test.cc  parser.cc  parser.h  parser_test.cc  solver.cc
.github/workflows/: cmake-single-platform.yml
datasets/: README.md
datasets/netlib_revised_simplex_sol/: adlittle.txt  afiro.txt  agg3.txt  israel.txt  kb2.txt
datasets/netlib_simplex_sol/: agg2.txt  fit1d.txt  israel.txt
datasets/netlib_simplex_sol_max_reduction/: adlittle.txt  afiro.txt  agg.txt  agg2.txt  agg3.txt  israel.txt  kb2.txt
datasets/netlib_sol/: adlittle.txt  afiro.txt  agg.txt  agg2.txt  agg3.txt  fit1d.txt  israel.txt  kb2.txt
doc/: column_generation.md  integer_programming.md  interior_point.md  linear_programming.md
examples/: test1.txt  test2.txt
tests/: sol12.txt  sol13.txt  sol14.txt  sol15.txt  sol15_revised_simplex_tableau.txt  sol15_simplex_tableau.txt  sol15_simplex_tableau_max_reduction.txt  sol16.txt  sol16_revised_simplex_tableau.txt  sol16_simplex_tableau.txt  sol16_simplex_tableau_max_reduction.txt  sol17.txt  sol17_simplex_tableau.txt  test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test2.txt  test20.txt  test21.txt  test3.txt  test4.txt  test5.txt  test7.txt  test8.txt  test9.txt
tools/: mps_load.py  preprocessing.sh
